# rolodex

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  benchmark_openmp.sh  compare_runs.sh  knn.cpp  plan.md  visualize_clusters.py
include/rolodex/: cache_utils.hpp  cli.hpp  dataset.hpp  distance.hpp  kmeans.hpp  query_result.hpp  timing.hpp  types.hpp  utils.hpp  validation.hpp  validator.hpp
scripts/: bench.sh  bench_k_parallel_only.sh  bench_k_scaling.sh  bench_nprobes.sh  bench_update_frequency.sh  bench_weak_scaling.sh  benchmark_openmp.sh  compare_runs.sh  comparison.out  download_datasets.sh  format.sh  plot_benchmarks.py  plot_k_scaling.py  plot_nprobes.py  plot_update_frequency.py  plot_weak_scaling.py  profile.sh  update_iters.out  utils.sh  visualize_clusters.py  visualize_clusters_mpi_timeline.py  visualize_clusters_timeline.py
src/: cache_utils.cpp  cli.cpp  dataset.cpp  kmeans.cpp  kmeans_mpi.cpp  kmeans_openmp.cpp  kmeans_serial.cpp  knn_main.cpp  knn_mpi_main.cpp  knn_openmp_main.cpp  timing.cpp  utils.cpp  validation.cpp  validator.cpp
